# ctxintel

./: .gitignore  README.md  pyproject.toml
ctxintel/: __init__.py  compressor.py  extractor.py  memory.py  models.py  optimizer.py  pipeline.py  presets.py  ranker.py
ctxintel/data/: patterns.yaml
examples/: agent_system.py  coding_assistant.py  customer_support.py  long_conversation.py
tests/: conftest.py  test_compressor.py  test_extractor.py  test_memory.py  test_optimizer.py  test_pipeline.py  test_ranker.py
